# filters

./: CMakeLists.txt  README.md  data_handler.cpp  data_handler.hpp  main.cpp  wav_handler.cpp  wav_handler.hpp
classes/: Filter.hpp  FiniteImpulseResponseFilter.cpp  FiniteImpulseResponseFilter.hpp  InfiniteImpulseResponseFilter.cpp  InfiniteImpulseResponseFilter.hpp
